tests/invalid/const_logic.lang
module main

const a bool = true && false;
